--- a/styles.css
+++ b/styles.css
@@ -58,8 +58,8 @@ img{
     .container{
     margin:30% auto;
   }
-  .row{
-    margin:20% auto 30%;
+  .resultcontainer{
+    margin:5% auto 40%;
   }
 
 
